2005-03-02  ARISAWA Akihiro  <ari@mbf.ocn.ne.jp>

	* w3m.el (w3m-show-decoded-url): New user option.
	(w3m-make-url-decode-function): New inline function.
	(w3m-make-help-echo): Use it.
	(w3m-fontify-anchors): The function of help-echo property has
	an ability to decode url.

2005-03-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-decode-coding-string-with-priority): New function.

	* w3m.el (w3m-url-decode-string): Use it.

2005-03-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-attributes-1): Support `300 Multiple Choices'.
	(w3m-w3m-retrieve): Ditto.
	(w3m-w3m-retrieve-1): Ditto.

2005-02-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-detect-coding-region): Use the name of the
	coding system instead of the coding category if it is void.

	* w3m-util.el (w3m-set-match-data): New macro which converts
	points into markers under XEmacs.
	(w3m-search-tag-1): Use it.

	* w3m-e19.el: Autoload easymenu in order to avoid compile warning.
	* w3m-om.el: Ditto.

2005-02-26  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-heise.el (shimbun-heise-get-newsticker-headers): Replace
	'w3m-expand-url' to 'shimbun-expand-url'.
	(shimbun-heise-get-newsticker-headers): Ditto.

2005-02-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (all): Use `w3m-form-set-number' and
	`w3m-form-kill-buffer' instead of `w3m-form-textarea-set-number'
	and `w3m-form-textarea-kill-buffer'

	* w3m-form.el (w3m-form-input-select-urlid): New buffer local
	variable.
	(w3m-form-input-map-urlname): Ditto.
	(w3m-form-set-number): Rename from `w3m-form-textarea-set-number'
	and treate buffers of `select' and `map'.
	(w3m-form-kill-buffer): Ditto.
	(w3m-form-input-select-set): Allways remove own buffer.
	(w3m-form-input-select-exit): Ditto.
	(w3m-form-input-map-set): Ditto.
	(w3m-form-input-map-exit): Ditto.
	(w3m-form-input-select): When exists same from buffer, use it.
	(w3m-form-input-map): Ditto.

2005-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>
