@@ -1,3 +1,9 @@
+2005-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-make-help-echo): Make it work with XEmacs.
+	(w3m-make-balloon-help): Support decoding URIs.
+	(w3m-fontify-anchors): Make the balloon-help show decoded URIs.
+
 2005-03-02  ARISAWA Akihiro  <ari@mbf.ocn.ne.jp>
 
 	* w3m.el (w3m-show-decoded-url): New user option.
